# product-service/src/main/java/com/shopflow/product/dto/CategoryRequest.java
@@ -1,0 +1,11 @@
+package com.shopflow.product.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.Data;
+
+@Data
+public class CategoryRequest {
+    @NotBlank(message = "name is required")
+    private String name;
+    private String description;
+}
